; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_bind_to_port.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_bind_to_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_storage = type { i32 }
%struct.sockaddr_in = type { i32, i8* }
%struct.sockaddr_in6 = type { i32, i8* }
%struct.sockaddr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@AF_INET6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @bind_to_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bind_to_port(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.sockaddr_storage, align 4
  %9 = alloca i64, align 8
  %10 = alloca %struct.sockaddr_in*, align 8
  %11 = alloca %struct.sockaddr_in6*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = bitcast %struct.sockaddr_storage* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 4, i1 false)
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @AF_INET, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %25

16:                                               ; preds = %3
  %17 = bitcast %struct.sockaddr_storage* %8 to %struct.sockaddr_in*
  store %struct.sockaddr_in* %17, %struct.sockaddr_in** %10, align 8
  store i64 16, i64* %9, align 8
  %18 = load i32, i32* @AF_INET, align 4
  %19 = load %struct.sockaddr_in*, %struct.sockaddr_in** %10, align 8
  %20 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i8* @htons(i32 %21)
  %23 = load %struct.sockaddr_in*, %struct.sockaddr_in** %10, align 8
  %24 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %23, i32 0, i32 1
  store i8* %22, i8** %24, align 8
  br label %40

25:                                               ; preds = %3
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @AF_INET6, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %38

29:                                               ; preds = %25
  %30 = bitcast %struct.sockaddr_storage* %8 to %struct.sockaddr_in6*
  store %struct.sockaddr_in6* %30, %struct.sockaddr_in6** %11, align 8
  store i64 16, i64* %9, align 8
  %31 = load i32, i32* @AF_INET6, align 4
  %32 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %11, align 8
  %33 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  %34 = load i32, i32* %7, align 4
  %35 = call i8* @htons(i32 %34)
  %36 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %11, align 8
  %37 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %36, i32 0, i32 1
  store i8* %35, i8** %37, align 8
  br label %39

38:                                               ; preds = %25
  store i32 0, i32* %4, align 4
  br label %47

39:                                               ; preds = %29
  br label %40

40:                                               ; preds = %39, %16
  %41 = load i32, i32* %5, align 4
  %42 = bitcast %struct.sockaddr_storage* %8 to %struct.sockaddr*
  %43 = load i64, i64* %9, align 8
  %44 = call i64 @bind(i32 %41, %struct.sockaddr* %42, i64 %43)
  %45 = icmp eq i64 %44, 0
  %46 = zext i1 %45 to i32
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %40, %38
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i8* @htons(i32) #2

declare dso_local i64 @bind(i32, %struct.sockaddr*, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
